@@ -182,6 +182,11 @@ alsa_mixer_source_dispatch(GSource *_source,
 	if (err < 0) {
 		g_warning("snd_mixer_handle_events() failed: %s",
 			  snd_strerror(err));
+
+		if (err == -ENODEV)
+			/* the sound device was unplugged; disable
+			   this GSource */
+			return false;
 	}
 
 	return true;
