@@ -1,4 +1,6 @@
 ver 0.17.6 (not yet released)
+* mixer:
+  - alsa: fix busy loop when USB sound device gets unplugged
 
 ver 0.17.5 (2013/08/04)
 * protocol:
